<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/appBarItemDelete"
        android:title="@string/titleAppBarItemSearch"
        android:icon="@drawable/ic_baseline_delete"
        app:showAsAction="ifRoom"
        android:visible="false">
    </item>
    <item
        android:id="@+id/appBarItemSearch"
        android:title="@string/titleAppBarItemSearch"
        android:icon="@drawable/ic_baseline_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:targetApi="o">
    </item>
    <item
        android:id="@+id/appBarItemSelect"
        android:title="@string/titleAppBarItemSelect"
        android:icon="@drawable/ic_baseline_search"
        app:showAsAction="never"
        android:visible="false">
    </item>
    <item
        android:id="@+id/appBarItemSort"
        android:title="@string/titleAppBarItemSort"
        android:icon="@drawable/ic_baseline_search"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/appBarItemView"
        android:title="@string/titleAppBarItemView"
        android:icon="@drawable/ic_baseline_search"
        app:showAsAction="never">
    </item>
</menu>